# f1_10_adv_alg

./: .gitignore  INSTALL  README.md  adv_arc.yml
adv_arc_ws/src/navigation/: README.md
adv_arc_ws/src/navigation/cm_setup_tf/: package.xml
adv_arc_ws/src/navigation/costmap_2d/: CMakeLists.txt
adv_arc_ws/src/navigation/costmap_2d/include/costmap_2d/: costmap_2d_ros.h  virtual_scan_layer.h
adv_arc_ws/src/navigation/costmap_2d/launch/: vs.launch  vs_params.yaml
adv_arc_ws/src/navigation/costmap_2d/plugins/: virtual_scan_layer.cpp
adv_arc_ws/src/navigation/costmap_2d/src/: costmap_2d_node.cpp
adv_arc_ws/src/navigation/rf2o_laser_odometry/src/: CLaserOdometry2D.cpp
adv_arc_ws/src/navigation/trajectory_brain/: CMakeLists.txt
adv_arc_ws/src/navigation/trajectory_brain/include/: trajectory_brain.h
adv_arc_ws/src/navigation/trajectory_brain/msg/: TrajectoryVector.msg
adv_arc_ws/src/navigation/trajectory_brain/src/: rbfa5.cpp  state_generator.cpp  trajectory_brain.cpp
adv_arc_ws/src/navigation/trajectory_cost/: package.xml
adv_arc_ws/src/navigation/trajectory_cost/msg/: TrajectoryID.msg
adv_arc_ws/src/navigation/trajectory_cost/src/: trajectory_cost.cpp
arc_adv_ws/src/navigation/costmap_2d/: package.xml
arc_adv_ws/src/navigation/costmap_2d/include/costmap_2d/: cost_values.h  virtual_scan_layer.h
arc_adv_ws/src/navigation/costmap_2d/launch/: cm_params.yaml  vs.launch  vs_params.yaml
arc_adv_ws/src/navigation/costmap_2d/plugins/: virtual_scan_layer.cpp  virtual_scan_layer.cpp.bak
arc_adv_ws/src/navigation/trajectory_brain/: CMakeLists.txt
arc_adv_ws/src/navigation/trajectory_brain/src/: trajectory_brain.cpp
arc_adv_ws/src/navigation/trajectory_cost/src/: trajectory_cost.cpp  trajectory_visualization.cpp
catkin_ws/src/depthimage_to_laserscan/src/: DepthImageToLaserScanROS.cpp
catkin_ws/src/navigation/: apriltags.tar
catkin_ws/src/navigation/apriltags/include/: apriltags.h
catkin_ws/src/navigation/apriltags/launch/: apriltag_detections.txt  apriltags.launch
catkin_ws/src/navigation/apriltags/scripts/: apriltag.pose  apriltag.rpy  apriltag_dets.txt  apriltag_orientation.txt  parse_apriltag.py
catkin_ws/src/navigation/apriltags/src/: apriltags.cpp
catkin_ws/src/navigation/cm_setup_tf/: CMakeLists.txt  package.xml
catkin_ws/src/navigation/cm_setup_tf/src/: cm_broadcast.cpp  cm_broadcast.cpp.bak2
catkin_ws/src/navigation/costmap_2d/: CMakeLists.txt  costmap_plugins.xml
catkin_ws/src/navigation/costmap_2d/include/costmap_2d/: costmap_2d_ros.h  virtual_scan_layer.h
catkin_ws/src/navigation/costmap_2d/launch/: cm.launch  vs_params.yaml
catkin_ws/src/navigation/costmap_2d/plugins/: virtual_scan_layer.cpp  virtual_scan_layer.cpp.bak  virtual_scan_layer.cpp.bak2
catkin_ws/src/navigation/dynamic_obstacle_detection/: CMakeLists.txt  package.xml
catkin_ws/src/navigation/dynamic_obstacle_detection/include/: project_obj.h
catkin_ws/src/navigation/dynamic_obstacle_detection/src/: project_obj.cpp
catkin_ws/src/navigation/fake_trajectory/: CMakeLists.txt  package.xml
catkin_ws/src/navigation/fake_trajectory/msg/: TrajectoryVector.msg
catkin_ws/src/navigation/fake_trajectory/src/: fake_traj_pub.cpp
catkin_ws/src/navigation/rf2o_laser_odometry/launch/: rf2o_laser_odometry.launch
catkin_ws/src/navigation/trajectory_brain/: CMakeLists.txt  package.xml
catkin_ws/src/navigation/trajectory_brain/include/: rbfa.h  rbfa1.c  rbfa2.c  rbfa3.c  rbfa4.c  rbfa5.c  trajectory_brain.h
catkin_ws/src/navigation/trajectory_brain/msg/: TrajectorySims.msg
catkin_ws/src/navigation/trajectory_brain/src/: rbfa1.cpp  rbfa2.cpp  rbfa3.cpp  rbfa4.cpp  trajectory_brain.cpp
catkin_ws/src/navigation/trajectory_cost/: CMakeLists.txt  package.xml
catkin_ws/src/navigation/trajectory_cost/include/: trajectory_cost.h
catkin_ws/src/navigation/trajectory_cost/msg/: TrajectoryCostVector.msg  TrajectoryID.msg
catkin_ws/src/navigation/trajectory_cost/src/: trajectory_cost.cpp
teensy_firmware/: teensy_drive.ino
