<?xml version="1.0"?>
<package>
  <name>trajectory_cost</name>
  <version>1.0.0</version>
  <description>The trajectory_cost package</description>

  <maintainer email="thu@seas.upenn.edu">thu</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>map_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>map_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <export>
  </export>
</package>
