<?xml version="1.0"?>
<package>
  <name>dynamic_obstacle_detection</name>
  <version>0.0.1</version>
  <description>The dynamic_obstacle_detection package</description>
  <maintainer email="thu@seas.upenn.edu">thu</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>random_numbers</build_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>random_numbers</run_depend>

  <export>
  </export>
</package>
