<?xml version="1.0"?>
<package>
  <name>fake_trajectory</name>
  <version>0.0.1</version>
  <description>The fake_trajectory package</description>

  <maintainer email="thu@todo.todo">thu</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>random_numbers</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>random_numbers</run_depend>
  
  <export>
  </export>
</package>
